# mailchimp

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: send.py
mailing/migrations/: 0001_initial.py  0002_mailingclient.py  0003_alter_mailingclient_options_mailinglog_client_and_more.py  0004_alter_mailinglog_client.py  0005_alter_mailingsettings_end_time_and_more.py  0006_client_owner_mailingclient_owner_mailinglog_owner_and_more.py  0007_alter_mailingsettings_options_and_more.py
mailing/services/: __init__.py  send_mails.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  clients.html  contacts.html  home_page.html  mailingclient_list.html  mailinglog_list.html  mailingsettings_confirm_delete.html  mailingsettings_form.html  mailingsettings_list.html  main.html  message_confirm_delete.html  message_form.html  message_update.html  messages.html
mailing/templatetags/: tags_filters.py
static/css/: style.css  style2.css
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_alter_user_options.py
users/services/: random_password.py
users/templates/users/: login.html  random_password_form.html  (+4 more)
