[tool.poetry]
name = "mailchimp"
version = "0.1.0"
description = ""
authors = ["vlad <sapozhnikov.061098@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
requests = "^2.31.0"
pillow = "^10.0.0"
django-crontab = "^0.7.1"
redis = "^5.0.0"
pytils = "^0.4.1"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
